Fix card selector overlap

--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
 }
 body {
-  background-color: #f1f1f1;
+  background-color: #FCFCFC;
 }
 
 .main-container {
@@ -62,9 +62,9 @@ body {
   height: 100%;
 }
 
-.card {
+.box-container {
   background-color: white;
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0rem 1rem rgba(0, 0, 0, 0.2);
   padding: 1.5rem;
   margin-bottom: 1.5rem;
 }
@@ -93,7 +93,8 @@ body {
 .page-title {
   font-size: 2rem;
   font-weight: 200;
-  margin-bottom: 1rem;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .input-label {
